# api/src/routes.ts
@@ -9,7 +9,10 @@ import ratingRoutes from './routes/rating'
 import reviewRoutes from './routes/review'
 import reviewReplyRoutes from './routes/review-reply'
 import userRoutes from './routes/user'
+import courseRoutes from './routes/course'
+import schoolRoutes from './routes/school'
 
+router.use('/course', courseRoutes)
 router.use('/event', eventRoutes)
 router.use('/loginRoutes', loginRoutes)
 router.use('/mod', modRoutes)
@@ -17,5 +20,6 @@ router.use('/user', userRoutes)
 router.use('/rating', ratingRoutes)
 router.use('/review', reviewRoutes)
 router.use('/review-reply', reviewReplyRoutes)
+router.use('/school', schoolRoutes)
 
 export default router
